# trademind

./: .env.docker  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tradebook-EC0640-FO.csv
config/: settings.py  settings_test.py
trades/: models.py
trades/adapters/: base.py  registry.py  zerodha.py
trades/domain/: fifo_engine.py  position_lot.py  realized_pnl.py  trade_dto.py
trades/migrations/: 0001_initial.py  0002_realizedtrade_alter_trade_options_and_more.py
trades/services/: analyze_trades.py  csv_ingestion.py  daily_pnl_service.py  ingestion_service.py  performance_metrics.py  pnl_service.py
trades/tests/: test_daily_pnl_service.py  test_fifo_engine.py  test_ingestion_pipeline.py  test_models.py  test_performance_metrics.py  test_realized_trade_persistence.py
